# gsf2

./: .gitignore  .readthedocs.yml  CITATION.cff  CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  LICENSE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
doc/: api.rst  conf.py  index.rst
gsf/: __init__.py  __main__.py  doclustering.py  dofilters.py  domath.py  donaming.py  doplots.py  dopotential.py  dosummary.py  edit_pyf.py  features.py  gsf.py  model_selection.py  run.py  setup.sh  twobody.f95  twobody.pyf
notebooks/: demo.ipynb
tests/: __init__.py  conftest.py  test_cli.py  test_gsf.py
